--- a/translation/en/sujato/sutta/sn/sn25/sn25.3_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.3_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn25.3:1.4": "nose consciousness, ",
   "sn25.3:1.5": "tongue consciousness, ",
   "sn25.3:1.6": "body consciousness, ",
-  "sn25.3:1.7": "and mind consciousness are impermanent, perishing, and changing. ",
+  "sn25.3:1.7": "and mind consciousness are impermanent, decaying, and perishing. ",
   "sn25.3:1.8": "Someone who has faith and confidence in these principles is called a follower by faith. …” ",
   "sn25.3:1.9": ""
 }
