--- a/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
@@ -33,7 +33,7 @@
   "sn35.93:3.1": "Mind consciousness arises dependent on the mind and thoughts. ",
   "sn35.93:3.2": "The mind is impermanent, perishing, and changing. ",
   "sn35.93:3.3": "Thoughts are impermanent, perishing, and changing. ",
-  "sn35.93:3.4": "So this duality is tottering and toppling; it’s impermanent, perishing, and changing. ",
+  "sn35.93:3.4": "So this duality is tottering and toppling; it’s impermanent, decaying, and perishing. ",
   "sn35.93:3.5": "Mind consciousness is impermanent, perishing, and changing. ",
   "sn35.93:3.6": "And the causes and conditions that give rise to mind consciousness are also impermanent, decaying, and perishing. ",
   "sn35.93:3.7": "But since mind consciousness has arisen dependent on conditions that are impermanent, how could it be permanent? ",
@@ -42,7 +42,7 @@
   "sn35.93:3.10": "And the causes and conditions that give rise to mind contact are also impermanent, decaying, and perishing. ",
   "sn35.93:3.11": "But since mind contact has arisen dependent on conditions that are impermanent, how could it be permanent? ",
   "sn35.93:3.12": "Contacted, one feels, intends, and perceives. ",
-  "sn35.93:3.13": "So these things too are tottering and toppling; they’re impermanent, perishing, and changing. ",
+  "sn35.93:3.13": "So these things too are tottering and toppling; they’re impermanent, decaying, and perishing. ",
   "sn35.93:3.14": "This is how consciousness exists dependent on a duality.” ",
   "sn35.93:3.15": "",
   "sn35.93:3.16": "",
