--- a/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
@@ -16,7 +16,7 @@
   "sn35.93:1.12": "And the causes and conditions that give rise to eye contact are also impermanent, decaying, and perishing. ",
   "sn35.93:1.13": "But since eye contact has arisen dependent on conditions that are impermanent, how could it be permanent? ",
   "sn35.93:1.14": "Contacted, one feels, intends, and perceives. ",
-  "sn35.93:1.15": "So these things too are tottering and toppling; they’re impermanent, perishing, and changing. ",
+  "sn35.93:1.15": "So these things too are tottering and toppling; they’re impermanent, decaying, and perishing. ",
   "sn35.93:2.1": "Ear consciousness … Nose consciousness … Tongue consciousness … Body consciousness … ",
   "sn35.93:2.2": "",
   "sn35.93:2.3": "",
