--- a/translation/en/sujato/sutta/sn/sn25/sn25.2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.2_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn25.2:1.4": "smells, ",
   "sn25.2:1.5": "tastes, ",
   "sn25.2:1.6": "touches, ",
-  "sn25.2:1.7": "and thoughts are impermanent, perishing, and changing. ",
+  "sn25.2:1.7": "and thoughts are impermanent, decaying, and perishing. ",
   "sn25.2:1.8": "Someone who has faith and confidence in these principles is called a follower by faith. They’ve arrived at inevitability regarding the right path, they’ve arrived at the level of the good person, and they’ve transcended the level of the bad person. ",
   "sn25.2:1.9": "They can’t do any deed which would make them be reborn in hell, the animal realm, or the ghost realm. ",
   "sn25.2:1.10": "They can’t die without realizing the fruit of stream-entry. ",
