--- a/translation/en/sujato/sutta/sn/sn25/sn25.7_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.7_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.7:0.2": "1. The Eye ",
   "sn25.7:0.3": "Intention ",
   "sn25.7:1.1": "At Sāvatthī. ",
-  "sn25.7:1.2": "“Mendicants, intention regarding sights is impermanent, perishing, and changing. ",
+  "sn25.7:1.2": "“Mendicants, intention regarding sights is impermanent, decaying, and perishing. ",
   "sn25.7:1.3": "Intention regarding sounds, ",
   "sn25.7:1.4": "intention regarding smells, ",
   "sn25.7:1.5": "intention regarding tastes, ",
