--- a/translation/en/sujato/sutta/sn/sn25/sn25.3_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.3_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.3:0.2": "1. The Eye ",
   "sn25.3:0.3": "Consciousness ",
   "sn25.3:1.1": "At Sāvatthī. ",
-  "sn25.3:1.2": "“Mendicants, eye consciousness is impermanent, perishing, and changing. ",
+  "sn25.3:1.2": "“Mendicants, eye consciousness is impermanent, decaying, and perishing. ",
   "sn25.3:1.3": "Ear consciousness, ",
   "sn25.3:1.4": "nose consciousness, ",
   "sn25.3:1.5": "tongue consciousness, ",
