--- a/translation/en/sujato/sutta/sn/sn25/sn25.8_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.8_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.8:0.2": "1. The Eye ",
   "sn25.8:0.3": "Craving For Sights ",
   "sn25.8:1.1": "At Sāvatthī. ",
-  "sn25.8:1.2": "“Mendicants, craving for sights is impermanent, perishing, and changing. ",
+  "sn25.8:1.2": "“Mendicants, craving for sights is impermanent, decaying, and perishing. ",
   "sn25.8:1.3": "Craving for sounds, ",
   "sn25.8:1.4": "craving for smells, ",
   "sn25.8:1.5": "craving for tastes, ",
