--- a/translation/en/sujato/sutta/sn/sn25/sn25.5_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.5_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.5:0.2": "1. The Eye ",
   "sn25.5:0.3": "Feeling ",
   "sn25.5:1.1": "At Sāvatthī. ",
-  "sn25.5:1.2": "“Mendicants, feeling born of eye contact is impermanent, perishing, and changing. ",
+  "sn25.5:1.2": "“Mendicants, feeling born of eye contact is impermanent, decaying, and perishing. ",
   "sn25.5:1.3": "Feeling born of ear contact, ",
   "sn25.5:1.4": "feeling born of nose contact, ",
   "sn25.5:1.5": "feeling born of tongue contact, ",
