--- a/translation/en/sujato/sutta/sn/sn25/sn25.4_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.4_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.4:0.2": "1. The Eye ",
   "sn25.4:0.3": "Contact ",
   "sn25.4:1.1": "At Sāvatthī. ",
-  "sn25.4:1.2": "“Mendicants, eye contact is impermanent, perishing, and changing. ",
+  "sn25.4:1.2": "“Mendicants, eye contact is impermanent, decaying, and perishing. ",
   "sn25.4:1.3": "Ear contact, ",
   "sn25.4:1.4": "nose contact, ",
   "sn25.4:1.5": "tongue contact, ",
