--- a/translation/en/sujato/sutta/sn/sn25/sn25.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.6_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.6:0.2": "1. The Eye ",
   "sn25.6:0.3": "Perception ",
   "sn25.6:1.1": "At Sāvatthī. ",
-  "sn25.6:1.2": "“Mendicants, perception of sights is impermanent, perishing, and changing. ",
+  "sn25.6:1.2": "“Mendicants, perception of sights is impermanent, decaying, and perishing. ",
   "sn25.6:1.3": "Perception of sounds, ",
   "sn25.6:1.4": "perception of smells, ",
   "sn25.6:1.5": "perception of tastes, ",
