--- a/translation/en/sujato/sutta/sn/sn25/sn25.9_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.9_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.9:0.2": "1. The Eye ",
   "sn25.9:0.3": "Elements ",
   "sn25.9:1.1": "At Sāvatthī. ",
-  "sn25.9:1.2": "“Mendicants, the earth element is impermanent, perishing, and changing. ",
+  "sn25.9:1.2": "“Mendicants, the earth element is impermanent, decaying, and perishing. ",
   "sn25.9:1.3": "The water element, ",
   "sn25.9:1.4": "the fire element, ",
   "sn25.9:1.5": "the air element, ",
