--- a/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
@@ -5,8 +5,8 @@
   "sn35.93:1.1": "“Mendicants, consciousness exists dependent on a duality. ",
   "sn35.93:1.2": "And what is that duality? ",
   "sn35.93:1.3": "Eye consciousness arises dependent on the eye and sights. ",
-  "sn35.93:1.4": "The eye is impermanent, perishing, and changing. ",
-  "sn35.93:1.5": "Sights are impermanent, perishing, and changing. ",
+  "sn35.93:1.4": "The eye is impermanent, decaying, and perishing. ",
+  "sn35.93:1.5": "Sights are impermanent, decaying, and perishing. ",
   "sn35.93:1.6": "So this duality is tottering and toppling; it’s impermanent, decaying, and perishing. ",
   "sn35.93:1.7": "Eye consciousness is impermanent, decaying, and perishing. ",
   "sn35.93:1.8": "And the causes and conditions that give rise to eye consciousness are also impermanent, decaying, and perishing. ",
