--- a/translation/en/sujato/sutta/sn/sn25/sn25.10_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.10_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.10:0.2": "1. The Eye ",
   "sn25.10:0.3": "The Aggregates ",
   "sn25.10:1.1": "At Sāvatthī. ",
-  "sn25.10:1.2": "“Mendicants, form is impermanent, perishing, and changing. ",
+  "sn25.10:1.2": "“Mendicants, form is impermanent, decaying, and perishing. ",
   "sn25.10:1.3": "Feeling, ",
   "sn25.10:1.4": "perception, ",
   "sn25.10:1.5": "choices, ",
