--- a/translation/en/sujato/sutta/sn/sn25/sn25.2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.2_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn25.2:0.2": "1. The Eye ",
   "sn25.2:0.3": "Sights ",
   "sn25.2:1.1": "At Sāvatthī. ",
-  "sn25.2:1.2": "“Mendicants, sights are impermanent, perishing, and changing. ",
+  "sn25.2:1.2": "“Mendicants, sights are impermanent, decaying, and perishing. ",
   "sn25.2:1.3": "Sounds, ",
   "sn25.2:1.4": "smells, ",
   "sn25.2:1.5": "tastes, ",
