--- a/translation/en/sujato/sutta/mn/mn35_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn35_translation-en-sujato.json
@@ -20,7 +20,7 @@
   "mn35:4.6": "This is how the ascetic Gotama guides his disciples, and how instruction to his disciples generally proceeds.” ",
   "mn35:4.7": "“It’s sad to hear, Master Assaji, that the ascetic Gotama has such a doctrine. ",
   "mn35:4.8": "Hopefully, some time or other I’ll get to meet Master Gotama, and we can have a discussion. And hopefully I can dissuade him from this harmful misconception.” ",
-  "mn35:5.1": "Now at that time around five hundred Licchavis were sitting together at the meeting hall on some business. ",
+  "mn35:5.1": "Now at that time around five hundred Licchavis were sitting together at the town hall on some business. ",
   "mn35:5.2": "Then Saccaka went up to them and said, ",
   "mn35:5.3": "“Come forth, good Licchavīs, come forth! Today I am going to have a discussion with the ascetic Gotama. ",
   "mn35:5.4": "If he stands by the position stated to me by one of his well-known disciples—a mendicant named Assaji—I’ll take him on in debate and drag him to and fro and round about, like a strong man would drag a fleecy sheep to and fro and round about! ",
