--- a/translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json
@@ -13,7 +13,7 @@
   "an8.12:3.1": "“But Sīha, you believe in the doctrine of action. Why should you go to see the ascetic Gotama, who teaches a doctrine of inaction? ",
   "an8.12:3.2": "For the ascetic Gotama believes in a doctrine of inaction, he teaches inaction, and he guides his disciples in that way.” ",
   "an8.12:3.3": "Then Sīha’s determination to go and see the Buddha died down. ",
-  "an8.12:4.1": "For a second time, several prominent Licchavis were sitting together at the meeting hall, praising the Buddha, his teaching, and the Saṅgha in many ways. ",
+  "an8.12:4.1": "For a second time, several prominent Licchavis were sitting together at the town hall, praising the Buddha, his teaching, and the Saṅgha in many ways. ",
   "an8.12:4.2": "And for a second time Sīha thought: ",
   "an8.12:4.3": "",
   "an8.12:4.4": "“Why don’t I go to see that Blessed One, the perfected one, the fully awakened Buddha!” ",
