--- a/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
@@ -4,7 +4,7 @@
   "an7.56:0.3": "Tissa the Brahmā ",
   "an7.56:1.1": "So I have heard. ",
   "an7.56:1.2": "At one time the Buddha was staying near Rājagaha, on the Vulture’s Peak Mountain. ",
-  "an7.56:1.3": "Then, late at night, a glorious deity, lighting up the entire Vulture’s Peak, went up to the Buddha, bowed, stood to one side, and said to him, ",
+  "an7.56:1.3": "Then, late at night, two glorious deities, lighting up the entire Vulture’s Peak, went up to the Buddha, bowed, stood to one side, and said to him, ",
   "an7.56:1.4": "“Sir, these nuns are freed!” ",
   "an7.56:1.5": "And another deity told the Buddha, ",
   "an7.56:1.6": "“Sir, these nuns are well freed without anything left over!” ",
