--- a/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
@@ -6,7 +6,7 @@
   "an7.56:1.2": "At one time the Buddha was staying near Rājagaha, on the Vulture’s Peak Mountain. ",
   "an7.56:1.3": "Then, late at night, two glorious deities, lighting up the entire Vulture’s Peak, went up to the Buddha, bowed, and stood to one side. One deity said to him, ",
   "an7.56:1.4": "“Sir, these nuns are freed!” ",
-  "an7.56:1.5": "The other deity told the Buddha, ",
+  "an7.56:1.5": "The other deity said to him, ",
   "an7.56:1.6": "“Sir, these nuns are well freed without anything left over!” ",
   "an7.56:1.7": "This is what that deity said, ",
   "an7.56:1.8": "and the teacher approved. ",
