--- a/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "an7.56:1.4": "“Sir, these nuns are freed!” ",
   "an7.56:1.5": "The other deity said to him, ",
   "an7.56:1.6": "“Sir, these nuns are well freed without anything left over!” ",
-  "an7.56:1.7": "This is what that deity said, ",
+  "an7.56:1.7": "This is what those deities said, ",
   "an7.56:1.8": "and the teacher approved. ",
   "an7.56:1.9": "Then that deity, knowing that the teacher approved, bowed and respectfully circled the Buddha, keeping him on his right, before vanishing right there. ",
   "an7.56:2.1": "Then, when the night had passed, the Buddha told the mendicants all that had happened. ",
