--- a/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.56_translation-en-sujato.json
@@ -10,7 +10,7 @@
   "an7.56:1.6": "“Sir, these nuns are well freed without anything left over!” ",
   "an7.56:1.7": "This is what those deities said, ",
   "an7.56:1.8": "and the teacher approved. ",
-  "an7.56:1.9": "Then that deity, knowing that the teacher approved, bowed and respectfully circled the Buddha, keeping him on his right, before vanishing right there. ",
+  "an7.56:1.9": "Then those deities, knowing that the teacher approved, bowed and respectfully circled the Buddha, keeping him on his right, before vanishing right there. ",
   "an7.56:2.1": "Then, when the night had passed, the Buddha told the mendicants all that had happened. ",
   "an7.56:2.2": "",
   "an7.56:2.3": "",
