--- a/translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json
@@ -119,7 +119,7 @@
   "thag21.1:28.4": "the unsurpassed caravan leader. ",
   "thag21.1:29.1": "All are sons of the Blessed One—",
   "thag21.1:29.2": "there is no rubbish here. ",
-  "thag21.1:29.3": "I bow to the Kinsman of the Sun, ",
+  "thag21.1:29.3": "I bow to the kinsman of the Sun, ",
   "thag21.1:29.4": "destroyer of the dart of craving.” ",
   "thag21.1:30.1": "“Over a thousand mendicants ",
   "thag21.1:30.2": "revere the Holy One ",
