--- a/translation/en/sujato/sutta/sn/sn8/sn8.7_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn8/sn8.7_translation-en-sujato.json
@@ -39,6 +39,6 @@
   "sn8.7:8.4": "the unsurpassed caravan leader. ",
   "sn8.7:9.1": "All are sons of the Blessed One—",
   "sn8.7:9.2": "there is no rubbish here. ",
-  "sn8.7:9.3": "I bow to the Kinsman of the Sun, ",
+  "sn8.7:9.3": "I bow to the kinsman of the Sun, ",
   "sn8.7:9.4": "destroyer of the dart of craving.”"
 }
