--- a/translation/en/sujato/sutta/an/an9/an9.41_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an9/an9.41_translation-en-sujato.json
@@ -84,7 +84,7 @@
   "an9.41:10.10": "‘Suppose that, seeing the drawbacks of equanimous bliss, I were to cultivate that. And suppose that, realizing the benefits of being without pleasure and pain, I were to develop that. It’s possible that my mind would be eager to be without pleasure and pain; it would be confident, settled, and decided about it. And I would see it as peaceful.’ ",
   "an9.41:10.11": "And so, after some time, I saw the drawbacks of equanimous bliss and cultivated that, and I realized the benefits of being without pleasure and pain and developed that. ",
   "an9.41:10.12": "Then my mind was eager to be without pleasure and pain; it was confident, settled, and decided about it. I saw it as peaceful. ",
-  "an9.41:10.13": "And so, giving up pleasure and pain … I was entering and remaining in the fourth absorption. ",
+  "an9.41:10.13": "And so, giving up pleasure and pain … I entered and remained in the fourth absorption. ",
   "an9.41:10.14": "While I was in that meditation, perceptions and attentions accompanied by equanimous bliss beset me, and that was an affliction for me. ",
   "an9.41:10.15": "Suppose a happy person were to experience pain; that would be an affliction for them. ",
   "an9.41:10.16": "In the same way, when perceptions and attentions accompanied by equanimous bliss beset me, that was an affliction for me. ",
