--- a/translation/en/sujato/sutta/an/an9/an9.41_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an9/an9.41_translation-en-sujato.json
@@ -116,7 +116,7 @@
   "an9.41:12.10": "‘Suppose that, seeing the drawbacks of the dimension of infinite space, I were to cultivate that. And suppose that, realizing the benefits of the dimension of infinite consciousness, I were to develop that. It’s possible that my mind would be eager for the dimension of infinite consciousness; it would be confident, settled, and decided about it. And I would see it as peaceful.’ ",
   "an9.41:12.11": "And so, after some time, I saw the drawbacks of the dimension of infinite space and cultivated that, and I realized the benefits of the dimension of infinite consciousness and developed that. ",
   "an9.41:12.12": "Then my mind was eager for the dimension of infinite consciousness; it was confident, settled, and decided about it. I saw it as peaceful. ",
-  "an9.41:12.13": "And so, going totally beyond the dimension of infinite space, aware that ‘consciousness is infinite’, I was entering and remaining in the dimension of infinite consciousness. ",
+  "an9.41:12.13": "And so, going totally beyond the dimension of infinite space, aware that ‘consciousness is infinite’, I entered and remained in the dimension of infinite consciousness. ",
   "an9.41:12.14": "While I was in that meditation, perceptions and attentions accompanied by the dimension of infinite space beset me, and that was an affliction for me. ",
   "an9.41:12.15": "Suppose a happy person were to experience pain; that would be an affliction for them. ",
   "an9.41:12.16": "In the same way, when perceptions and attentions accompanied by the dimension of infinite space beset me, that was an affliction for me. ",
