--- a/translation/en/sujato/sutta/sn/sn8/sn8.7_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn8/sn8.7_translation-en-sujato.json
@@ -9,7 +9,7 @@
   "sn8.7:1.5": "Is there anything I’ve done by way of body or speech that you would criticize?” ",
   "sn8.7:2.1": "When he had spoken, Venerable Sāriputta got up from his seat, arranged his robe over one shoulder, raised his joined palms toward the Buddha, and said: ",
   "sn8.7:2.2": "“There is nothing, sir, that you’ve done by way of body or speech that we would criticize. ",
-  "sn8.7:2.3": "For the Blessed One is the one who gave rise to the unarisen path, who gave birth to the unborn path, who explained the unexplained path. He is the knower of the path, the discoverer of the path, the expert on the path. ",
+  "sn8.7:2.3": "For the Blessed One gave rise to the unarisen path, gave birth to the unborn path, and explained the unexplained path. He is the knower of the path, the discoverer of the path, the expert on the path. ",
   "sn8.7:2.4": "And now the disciples live following the path; they acquire it later. ",
   "sn8.7:2.5": "And sir, I invite the Blessed One. ",
   "sn8.7:2.6": "Is there anything I’ve done by way of body or speech that you would criticize?” ",
