--- a/translation/en/sujato/sutta/mn/mn149_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn149_translation-en-sujato.json
@@ -11,7 +11,7 @@
   "mn149:2.2": "Listen and pay close attention, I will speak.” ",
   "mn149:2.3": "“Yes, sir,” they replied. ",
   "mn149:2.4": "The Buddha said this: ",
-  "mn149:3.1": "“Mendicants, when you don’t truly know and see the eye, sights, eye consciousness, eye contact, and what is felt as pleasant, painful, or neutral that arises conditioned by eye contact, you’re aroused by desire for these things. ",
+  "mn149:3.1": "“Mendicants, when you don’t truly know and see the eye, sights, eye consciousness, eye contact, and what is felt as pleasant, painful, or neutral that arises conditioned by eye contact, you’re aroused by these things. ",
   "mn149:3.2": "Someone who lives aroused like this—fettered, confused, concentrating on gratification—accumulates the five grasping aggregates for themselves in the future. ",
   "mn149:3.3": "And their craving—which leads to future rebirth, mixed up with relishing and greed, looking for enjoyment in various different realms—grows. ",
   "mn149:3.4": "Their physical and mental stress, ",
