--- a/translation/en/sujato/sutta/mn/mn149_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn149_translation-en-sujato.json
@@ -22,7 +22,7 @@
   "mn149:4-7.2": "nose … ",
   "mn149:4-7.3": "tongue … ",
   "mn149:4-7.4": "body … ",
-  "mn149:4-7.5": "mind, thoughts, mind consciousness, mind contact, and what is felt as pleasant, painful, or neutral that arises conditioned by mind contact, you’re aroused by desire for these things. ",
+  "mn149:4-7.5": "mind, thoughts, mind consciousness, mind contact, and what is felt as pleasant, painful, or neutral that arises conditioned by mind contact, you’re aroused by these things. ",
   "mn149:8.1": "Someone who lives aroused like this—fettered, confused, concentrating on gratification—accumulates the five grasping aggregates for themselves in the future. ",
   "mn149:8.2": "And their craving—which leads to future rebirth, mixed up with relishing and greed, looking for enjoyment in various different realms—grows. ",
   "mn149:8.3": "Their physical and mental stress, ",
