--- a/translation/en/sujato/sutta/sn/sn22/sn22.28_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.28_translation-en-sujato.json
@@ -13,7 +13,7 @@
   "sn22.28:1.9": "perception … ",
   "sn22.28:1.10": "choices … ",
   "sn22.28:1.11": "",
-  "sn22.28:1.12": "consciousness, sentient beings wouldn’t love it. ",
+  "sn22.28:1.12": "consciousness, sentient beings wouldn’t be aroused by it. ",
   "sn22.28:1.13": "But since there is gratification in consciousness, sentient beings do love it. ",
   "sn22.28:1.14": "If consciousness had no drawback, sentient beings wouldn’t grow disillusioned with it. ",
   "sn22.28:1.15": "But since consciousness has a drawback, sentient beings do grow disillusioned with it. ",
