--- a/translation/en/sujato/sutta/sn/sn35/sn35.17_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.17_translation-en-sujato.json
@@ -17,7 +17,7 @@
   "sn35.17:1.13": "",
   "sn35.17:1.14": "",
   "sn35.17:1.15": "body … ",
-  "sn35.17:1.16": "mind, sentient beings wouldn’t love it. ",
+  "sn35.17:1.16": "mind, sentient beings wouldn’t be aroused by it. ",
   "sn35.17:1.17": "But since there is gratification in the mind, sentient beings do love it. ",
   "sn35.17:1.18": "If the mind had no drawback, sentient beings wouldn’t grow disillusioned with it. ",
   "sn35.17:1.19": "But since the mind has a drawback, sentient beings do grow disillusioned with it. ",
