--- a/translation/en/sujato/sutta/sn/sn22/sn22.60_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.60_translation-en-sujato.json
@@ -17,7 +17,7 @@
   "sn22.60:3.4": "Sentient beings are purified with cause and reason.” ",
   "sn22.60:4.1": "“But sir, what is the cause and condition for the corruption of sentient beings? ",
   "sn22.60:4.2": "How are sentient beings corrupted with cause and reason?” ",
-  "sn22.60:5.1": "“Mahāli, if form were exclusively painful—soaked and steeped in pain and not steeped in pleasure—sentient beings wouldn’t lust after it. ",
+  "sn22.60:5.1": "“Mahāli, if form were exclusively painful—soaked and steeped in pain and not steeped in pleasure—sentient beings wouldn’t be aroused by it. ",
   "sn22.60:5.2": "But because form is pleasurable—soaked and steeped in pleasure and not steeped in pain—sentient beings do lust after it. ",
   "sn22.60:5.3": "Since they lust after it, they’re caught up in it, and so they become corrupted. ",
   "sn22.60:5.4": "This is a cause and condition for the corruption of sentient beings. ",
