--- a/translation/en/sujato/sutta/sn/sn22/sn22.60_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.60_translation-en-sujato.json
@@ -35,7 +35,7 @@
   "sn22.60:7.5": "",
   "sn22.60:7.6": "",
   "sn22.60:7.7": "",
-  "sn22.60:8.1": "consciousness were exclusively painful—soaked and steeped in pain and not steeped in pleasure—sentient beings wouldn’t lust after it. ",
+  "sn22.60:8.1": "consciousness were exclusively painful—soaked and steeped in pain and not steeped in pleasure—sentient beings wouldn’t be aroused by it. ",
   "sn22.60:8.2": "But because consciousness is pleasurable—soaked and steeped in pleasure and not steeped in pain—sentient beings do lust after it. ",
   "sn22.60:8.3": "Since they lust after it, they’re caught up in it, and so they become corrupted. ",
   "sn22.60:8.4": "This is a cause and condition for the corruption of sentient beings. ",
