--- a/translation/en/sujato/sutta/kn/thag/thag17.2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thag/thag17.2_translation-en-sujato.json
@@ -29,7 +29,7 @@
   "thag17.2:6.4": "what keeps you in the world? What would you become? ",
   "thag17.2:7.1": "Thinking, ‘May I have nothing to do with those of bad wishes, ",
   "thag17.2:7.2": "lazy, lacking energy, ",
-  "thag17.2:7.3": "uneducated, lacking regard for others’—",
+  "thag17.2:7.3": "unlearned, lacking regard for others’—",
   "thag17.2:7.4": "what keeps you in the world? What would you become?” ",
   "thag17.2:8.1": "“An intelligent, learned person, ",
   "thag17.2:8.2": "steady in ethics, ",
