--- a/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
@@ -10,7 +10,7 @@
   "sn14.12:3.1": "The element of malice gives rise to malicious perceptions. Malicious perceptions give rise to malicious thoughts. … malicious desires … malicious passions … malicious searches … ",
   "sn14.12:3.2": "An unlearned ordinary person on a malicious search behaves badly in three ways: by body, speech, and mind. ",
   "sn14.12:4.1": "The element of cruelty gives rise to cruel perceptions. Cruel perceptions give rise to cruel thoughts. … cruel desires … cruel passions … cruel searches … ",
-  "sn14.12:4.2": "An uneducated ordinary person on a cruel search behaves badly in three ways: by body, speech, and mind. ",
+  "sn14.12:4.2": "An unlearned ordinary person on a cruel search behaves badly in three ways: by body, speech, and mind. ",
   "sn14.12:5.1": "Suppose a person was to drop a burning torch in a thicket of dry grass. If they don’t quickly extinguish it with their hands and feet, the creatures living in the grass and wood would come to ruin. ",
   "sn14.12:5.2": "In the same way, a corrupt perception might arise in an ascetic or brahmin. If they don’t quickly give it up, get rid of it, eliminate it, and obliterate it, they’ll suffer in the present life, with anguish, distress, and fever. ",
   "sn14.12:5.3": "And when the body breaks up, after death, they can expect to be reborn in a bad place. ",
