--- a/translation/en/sujato/sutta/an/an3/an3.39_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.39_translation-en-sujato.json
@@ -12,7 +12,7 @@
   "an3.39:2.2": "I stayed in a stilt longhouse without coming downstairs for the four months of the rainy season, where I was entertained by musicians—none of them men. ",
   "an3.39:2.3": "While the bondservants, workers, and staff in other houses are given rough gruel with pickles to eat, in my father’s home they eat fine rice with meat. ",
   "an3.39:3.1": "Amid such prosperity and such a delicate lifestyle, I thought: ",
-  "an3.39:3.2": "‘When an uneducated ordinary person—who is liable to grow old, not being exempt from old age—sees someone else who is old, they’re horrified, repelled, and disgusted, overlooking the fact that they themselves are in the same situation. ",
+  "an3.39:3.2": "‘When an unlearned ordinary person—who is liable to grow old, not being exempt from old age—sees someone else who is old, they’re horrified, repelled, and disgusted, overlooking the fact that they themselves are in the same situation. ",
   "an3.39:3.3": "But since I, too, am liable to grow old, it would not be appropriate for me to be horrified, embarrassed, and disgusted, when I see someone else who is old.’ ",
   "an3.39:3.4": "Reflecting like this, I entirely gave up the vanity of youth. ",
   "an3.39:4.1": "‘When an unlearned ordinary person—who is liable to get sick, not being exempt from sickness—sees someone else who is sick, they’re horrified, repelled, and disgusted, overlooking the fact that they themselves are in the same situation. ",
