--- a/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
@@ -279,7 +279,7 @@
   "dn14:2.4.0": "6. Der Kranke ",
   "dn14:2.4.1": "Da dachte König Bandhuma: ",
   "dn14:2.4.2": "‚Der Prinz Vipassī darf nicht dem Thron entsagen. Er darf nicht aus dem Haus fortziehen ins hauslose Leben. Und die Worte der brahmanischen Wahrsager dürfen sich nicht erfüllen.‘ ",
-  "dn14:2.4.3": "Zu diesem Zweck versorgte er den Prinzen noch mehr mit den fünf Arten von Sinnesreizen, ",
+  "dn14:2.4.3": "Zu diesem Zweck versorgte er den Prinzen noch mehr mit den fünf Arten sinnlicher Erregung, ",
   "dn14:2.4.5": "und der Prinz vergnügte sich mit ihnen. ",
   "dn14:2.5.1": "Nachdem dann viele tausend Jahre vergangen waren, ließ sich Prinz Vipassī wieder von seinem Wagenlenker zum Park fahren. ",
   "dn14:2.6.1": "Am Weg sah er einen Mann, elend, leidend, schwer krank, in den eigenen Ausscheidungen liegend und darauf angewiesen, von den einen hochgehoben und von den anderen niedergelegt zu werden. ",
