--- a/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
@@ -333,7 +333,7 @@
   "dn14:2.12.0": "8. Der Hauslose ",
   "dn14:2.12.1": "Da dachte König Bandhuma: ",
   "dn14:2.12.2": "‚Der Prinz Vipassī darf nicht dem Thron entsagen. Er darf nicht aus dem Haus fortziehen ins hauslose Leben. Und die Worte der brahmanischen Wahrsager dürfen sich nicht erfüllen.‘ ",
-  "dn14:2.12.3": "Zu diesem Zweck versorgte er den Prinzen noch mehr mit den fünf Arten von Sinnesreizen, ",
+  "dn14:2.12.3": "Zu diesem Zweck versorgte er den Prinzen noch mehr mit den fünf Arten sinnlicher Erregung, ",
   "dn14:2.13.1": "und der Prinz vergnügte sich mit ihnen. ",
   "dn14:2.13.2": "Nachdem dann viele tausend Jahre vergangen waren, ließ sich Prinz Vipassī wieder von seinem Wagenlenker zum Park fahren. ",
   "dn14:2.14.1": "Am Weg sah er einen Mann, einen Hauslosen mit geschorenem Kopf, der eine ockerfarbene Robe trug. ",
