--- a/translation/de/sabbamitta/sutta/an/an9/an9.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.65_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an9.65:0.1": "Nummerierte Lehrreden 9.65 ",
   "an9.65:0.2": "7. Das Kapitel über Achtsamkeitsmeditation ",
-  "an9.65:0.3": "Arten von Sinnesreizen ",
+  "an9.65:0.3": "Arten sinnlicher Erregung ",
   "an9.65:1.1": "„Mönche und Nonnen, es gibt fünf Arten von Sinnesreizen. ",
   "an9.65:1.2": "Welche fünf? ",
   "an9.65:1.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
