--- a/translation/de/sabbamitta/sutta/an/an9/an9.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.65_translation-de-sabbamitta.json
@@ -9,6 +9,6 @@
   "an9.65:1.5": "Düfte, die die Nase erkennt … ",
   "an9.65:1.6": "Geschmäcke, die die Zunge erkennt … ",
   "an9.65:1.7": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "an9.65:1.8": "Das sind die fünf Arten von Sinnesreizen. ",
+  "an9.65:1.8": "Das sind die fünf Arten sinnlicher Erregung. ",
   "an9.65:2.1": "Um diese fünf Arten von Sinnesreizen aufzugeben, solltet ihr vier Arten der Achtsamkeitsmeditation entwickeln. …“ "
 }
