--- a/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
@@ -57,7 +57,7 @@
   "an10.177:14.3": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er in der Menschenwelt wiedergeboren. ",
   "an10.177:14.4": "Dort erhält er die fünf Arten sinnlicher Erregung der Menschen. ",
   "an10.177:15.1": "Da er in diesem Leben das Töten lebender Geschöpfe unterlassen hat … und rechte Ansicht hatte, wurde er unter Menschen wiedergeboren. ",
-  "an10.177:15.2": "Da er Asketen oder Brahmanen Spenden … gegeben hat, erhält er die fünf Arten menschlicher Sinnesreize. ",
+  "an10.177:15.2": "Da er Asketen oder Brahmanen Spenden … gegeben hat, erhält er die fünf Arten sinnlicher Erregung der Menschen. ",
   "an10.177:16.1": "Nehmen wir jemand anders, der das Töten lebende Geschöpfe unterlässt … und rechte Ansicht hat. ",
   "an10.177:16.2": "Er gibt Asketen oder Brahmanen Spenden … ",
   "an10.177:16.3": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er unter Göttern wiedergeboren. ",
