--- a/translation/de/sabbamitta/sutta/an/an9/an9.34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.34_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an9.34:1.13": "Geschmäcke, die die Zunge erkennt … ",
   "an9.34:1.14": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "an9.34:1.15": "Das sind die fünf Arten sinnlicher Erregung. ",
-  "an9.34:1.16": "Das Glück und die Freude, die von diesen fünf Arten von Sinnesreizen kommen, nennt man Sinnenfreuden. ",
+  "an9.34:1.16": "Das Glück und die Freude, die von diesen fünf Arten sinnlicher Erregung kommen, nennt man Sinnenfreuden. ",
   "an9.34:2.1": "Da tritt eine Nonne, ganz abgeschieden von den Sinnenfreuden … in die erste Vertiefung ein und verweilt darin. ",
   "an9.34:2.2": "Wenn die Wahrnehmung und Aufmerksamkeit einer Nonne, während sie in einer solchen Meditation verweilt, zu Dingen wandern, die mit Sinnenfreuden verbunden sind, so ist das für sie eine Beschwerde. ",
   "an9.34:2.3": "Wie wenn ein glücklicher Mensch Schmerz erfahren würde: Das wäre für ihn eine Beschwerde. ",
